# photogrammetry-capture-motion

./: .gitignore  CMakeLists.txt  README.md  camera.py  package.xml  test_file.md
camera/: camera.py
launch/: connect_gp7.launch  connect_gp7_d5600.launch  connect_gp7_d5600_rot.launch  connect_gp7_d5600_rot_sim.launch  move_reconstruction_path.launch
meshes/nikond5600/: EEF_assembly_v1_collision.STL  EEF_assembly_v1_visual.STL  cameraMount_v1.1_visual.STL
nodes/: cam_control_server.py
photos/: README.md
scripts/: README.md  backend.py  debug_pose_angle.py  detected_object.json  geo_obj.py  motion_inclined_plane.py  path_plans.py  photogrametry_capture_runner.py  photogrammetry_capture_runner.py  read_posn.py  robot_support.py  rviz_pose_array.py  shapes.py  transformations.py  utils.py  visualizations.py
srv/: TakePhotoMsg.srv
urdf/: camera_urdf.xacro
